fix trash icon visibility when on mobile

--- a/src/scss/Application/_taskRow.scss
+++ b/src/scss/Application/_taskRow.scss
@@ -5,7 +5,7 @@
   border-bottom: 1px solid $bg-color-light;
 
   &:hover {
-    .taskRow__btn {
+    .taskRow__deleteBtn {
       display: block;
     }
   }
@@ -90,9 +90,12 @@
     }
   }
 
-  &__btn {
+  &__deleteBtn {
     font-size: 1.1rem;
     display: none;
     color: $color-warning;
+    @include mobile{
+      display: block;
+    }
   }
 }
